# vector

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  pull_requests_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  notebooks.yml  paper.yml
docs/: changelog.md  conf.py  dev_guide.rst  index.md  index.rst
docs/_static/css/: awkward_output.css
docs/api/: modules.rst  vector._backends.awkward_.rst  vector._backends.numba_numpy.rst  vector._backends.numpy_.rst  vector._backends.rst  vector._compute.lorentz.Et.rst  vector._compute.lorentz.Et2.rst  vector._compute.lorentz.Mt.rst  vector._compute.lorentz.Mt2.rst  vector._compute.lorentz.add.rst  vector._compute.lorentz.beta.rst  vector._compute.lorentz.boostX_beta.rst  vector._compute.lorentz.boostX_gamma.rst  vector._compute.lorentz.boostY_beta.rst  vector._compute.lorentz.boostY_gamma.rst  vector._compute.lorentz.boostZ_beta.rst  vector._compute.lorentz.boostZ_gamma.rst  vector._compute.lorentz.boost_beta3.rst  vector._compute.lorentz.boost_p4.rst  vector._compute.lorentz.dot.rst  vector._compute.lorentz.equal.rst  vector._compute.lorentz.gamma.rst  vector._compute.lorentz.is_lightlike.rst  vector._compute.lorentz.is_spacelike.rst  vector._compute.lorentz.is_timelike.rst  vector._compute.lorentz.isclose.rst  vector._compute.lorentz.not_equal.rst  vector._compute.lorentz.rapidity.rst  vector._compute.lorentz.rst  vector._compute.lorentz.scale.rst  vector._compute.lorentz.subtract.rst  vector._compute.lorentz.t.rst  vector._compute.lorentz.t2.rst  vector._compute.lorentz.tau.rst  vector._compute.lorentz.tau2.rst  vector._compute.lorentz.to_beta3.rst  vector._compute.lorentz.transform4D.rst  vector._compute.lorentz.unit.rst  vector._compute.planar.add.rst  vector._compute.planar.deltaphi.rst  (+61 more)
docs/api/backends/: vector._backends.awkward_.rst  vector._backends.numba_.rst  vector._backends.rst  vector.backends._numba.rst  vector.backends._numba_object.rst  vector.backends.awkward.rst  vector.backends.awkward_constructors.rst  vector.backends.numba_numpy.rst  vector.backends.numpy.rst  vector.backends.object.rst  vector.backends.rst
docs/api/compute/: vector._compute.rst
docs/notebooks/: VectorDesignPrototype.ipynb
docs/src/: awkward.ipynb  common.md  make_awkward.md  make_numpy.md  make_object.md  make_sympy.md  momentum2d.md  momentum3d.md  momentum4d.md  numba.ipynb  numpy.ipynb  object.ipynb  pytree.ipynb  pytree.md  pytree_api.md  sympy.ipynb  talks.md  vector2d.md  vector3d.md  vector4d.md
docs/usage/: intro.ipynb  structure.md  vector_design_prototype.ipynb
notebooks/: VectorDesignPrototype.ipynb
paper/: paper.bib  paper.md
src/: __init__.py
src/vector/: __init__.py  _lib.py  _methods.py  _pytree.py  _typeutils.py  awkward.py  geometry.py  methods.py  protocols.py
src/vector/_backends/: __init__.py  awkward.py  awkward_.py  awkward_constructors.py  numba_.py  numba_numpy.py  numba_object.py  numpy_.py  object.py  object_.py
src/vector/_compute/: __init__.py
src/vector/awkward/: __init__.py  lorentz.py
src/vector/backends/: __init__.py  _numba.py  _numba_object.py  awkward.py  awkward_.py  awkward_constructors.py  numba.py  numba_.py  numba_numpy.py  numba_object.py  numpy.py  numpy_.py  object.py  object_.py  sympy.py  torch.py
src/vector/common/: lorentz.py
src/vector/compute/: __init__.py  transform2d.py
src/vector/core/: __init__.py
src/vector/mixins/: __init__.py
src/vector/numba/: awkward.py  lorentz.py
src/vector/protocols/: lorentz.py
src/vector/single/: lorentz.py
tests/: __init__.py  conftest.py  test_basic.py  test_compute_features.py  test_issues.py  test_methods.py  test_notebooks.py  test_pr_659.py  test_pytree.py  test_simple_numpy.py  test_simple_param.py
tests/awkward_tests/: __init__.py  test_demo.py  test_numba_basic.py
tests/backends/: test_awkward.py  test_awkward_numba.py  test_coordinate_validation.py  test_dask_awkward.py  test_numba.py  test_numba_numpy.py  test_numba_object.py  test_numpy.py  test_object.py  test_operators.py  test_sympy.py
tests/backends/test_sympy/: test_operators.py  test_sympy.py
tests/compute/: test_add.py  test_conversions.py  test_demotion.py  test_dot.py  test_equal.py  test_is_antiparallel.py  test_is_parallel.py  test_is_perpendicular.py  test_isclose.py  test_not_equal.py  test_scale.py  test_subtract.py  test_transform2d.py  test_unit.py
tests/compute/lorentz/: test_Et.py  test_Et2.py  test_Mt.py  test_Mt2.py  test_beta.py  test_boostX_beta.py  test_boostX_gamma.py  test_boostY_beta.py  test_boostY_gamma.py  test_boostZ_beta.py  test_boostZ_gamma.py  test_boost_beta3.py  test_boost_p4.py  test_deltaRapidityPhi.py  test_deltaRapidityPhi2.py  test_gamma.py  test_is_lightlike.py  test_is_spacelike.py  test_is_timelike.py  test_rapidity.py  test_t.py  test_t2.py  test_tau.py  test_tau2.py  test_to_beta3.py
tests/compute/planar/: __init__.py  test_cosdeltaphi.py  test_cross.py  test_deltaR.py  test_deltaeta.py  test_deltaphi.py  test_phi.py  test_rho.py  test_rho2.py  test_rotateZ.py  test_x.py  test_y.py
tests/compute/spatial/: __init__.py  test_costheta.py  test_cottheta.py  test_cross.py  test_deltaR.py  test_deltaR2.py  test_deltaangle.py  test_deltaeta.py  test_dot.py  (+10 more)
tests/numba_tests/: __init__.py  test_awkward.py  test_basic.py
tests/root/: conftest.py  test_EulerAngles.py  test_Polar2DVector.py  test_Polar3DVector.py  test_PtEtaPhiEVector.py  test_PtEtaPhiMVector.py  test_PxPyPzEVector-my.py  test_PxPyPzEVector.py  test_PxPyPzMVector.py  test_Quaternion.py  test_RhoEtaPhiVector.py  test_RhoZPhiVector.py  test_XYVector.py  test_XYZVector.py  test_vector.py
tests/root_tests/: __init__.py  test_root_basic.py
tests/samples/: issue-161-v2.pkl  issue-161.pkl
vector/: __init__.py  _version.py
(+332 files in other folders)
