[metadata]
name = vector
description = Vector classes and utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/vector
author = Eduardo Rodrigues
author_email = eduardo.rodrigues@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
keywords =
    vector

[options]
packages = find:
install_requires =
    numpy>=1.13.3
    typing;python_version<"3.5"
    typing_extensions;python_version<"3.8"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
package_dir =
    =src

[options.packages.find]
where = src

[tool:pytest]
addopts = -rs -s -Wd
testpaths =
    tests

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9
per-file-ignores =
    tests/*: T

[mypy]
files = src
python_version = 3.6
warn_unused_configs = True
warn_unused_ignores = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-numba]
ignore_missing_imports = True

[mypy-awkward]
ignore_missing_imports = True

[bdist_wheel]
universal = 1

[tool.check-manifest]
ignore =
    .github
