[metadata]
name = vector
description = Vector classes and utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/vector
author = Jim Pivarski, Henry Schreiner, Eduardo Rodrigues
author_email = eduardo.rodrigues@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Typing :: Typed
keywords =
    vector
project_urls =
    Documentation = https://vector.readthedocs.io/
    Bug Tracker = https://github.com/scikit-hep/vector/issues
    Discussions = https://github.com/scikit-hep/vector/discussions
    Changelog = https://vector.readthedocs.io/en/latest/changelog.html

[options]
packages = find:
install_requires =
    numpy>=1.13.3
    packaging>=19.0
    importlib-metadata>=0.22;python_version<"3.8"
    typing-extensions;python_version<"3.8"
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
numba_extensions =
    init = vector:register_numba

[flake8]
extend-ignore = E203, E231, E501, E722, W503, B950, D103, D102, D101, D100, D107, D105, D205, D400, D401, D104, D412
extend-select = B9
per-file-ignores =
    tests/*: T
